2023-07-15T08:19:49Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5561274024 # 991
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-15
* notice: last 14d: unq all: 18 63
* notice: prev accum: outdated-unq outdated-all / unq all: 519 832 / 560 895
* notice: next accum: outdated-unq outdated-all / unq all: 520 833 / 561 896
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2023-07-01] / [2023-07-15]

2023-07-15T01:46:17Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5559776952 # 990
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-15
* notice: last 14d: unq all: 18 63
* notice: prev accum: outdated-unq outdated-all / unq all: 519 832 / 560 894
* notice: next accum: outdated-unq outdated-all / unq all: 519 832 / 560 895
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-07-14]

2023-07-14T16:20:35Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5556152103 # 989
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-14
* notice: last 14d: unq all: 18 62
* notice: prev accum: outdated-unq outdated-all / unq all: 518 831 / 560 894
* notice: next accum: outdated-unq outdated-all / unq all: 519 832 / 560 894
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-06-30] / []

2023-07-14T08:21:10Z: