@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-07-15T08:19:49Z",
+  "timestamp" : "2023-07-16T01:57:15Z",
   "count_outdated" : 833,
   "uniques_outdated" : 520,
-  "count" : 896,
+  "count" : 897,
   "uniques" : 561,
   "clones" : [
     {
@@ -124,9 +124,9 @@
     },
     {
       "timestamp": "2023-07-15T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
