@@ -1,5 +1,5 @@
 {
-  "count": 63,
+  "count": 64,
   "uniques": 18,
   "clones": [
     {
@@ -69,7 +69,7 @@
     },
     {
       "timestamp": "2023-07-15T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
