@@ -1,3 +1,12 @@
+2023-07-16T01:57:15Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5565227145 # 993
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-16
+* notice: last 14d: unq all: 18 64
+* notice: prev accum: outdated-unq outdated-all / unq all: 520 833 / 561 896
+* notice: next accum: outdated-unq outdated-all / unq all: 520 833 / 561 897
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2023-07-15]
+
 2023-07-15T08:19:49Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5561274024 # 991
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-15
